modifique el archivo register.html y agregue config.txt

--- a/register.html
+++ b/register.html
@@ -1,5 +1,8 @@
 <h2>Registro de usuarios</h2>
 <form action="" method="post">
-    <input type="text">
+    <input type="text" placeholder="nombre de usuario">
+    <input type="text" placeholder="email">
+    <input type="password" placeholder="password">
     <button>registrar</button>
+
 </form>
